--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,18 @@
         <item>Kelvin</item>
     </string-array>
 
+    <string-array name="Kelvin">
+        <item>Celsius</item>
+        <item>Fahrenheit</item>
+    </string-array>
 
+    <string-array name="Fahrenheit">
+        <item>Celsius</item>
+        <item>Kelvin</item>
+    </string-array>
+
+    <string-array name="Celsius">
+        <item>Fahrenheit</item>
+        <item>Kelvin</item>
+    </string-array>
 </resources>
